syntax = "proto3";

package account.v1;

option go_package = "proxima/app/user/api/account/v1";

import "pbentity/user.proto";

service Account{
  rpc Register(RegisterReq) returns (RegisterRes) {}
  rpc Login(LoginReq) returns (LoginRes) {}
  rpc Info(InfoReq) returns (InfoRes) {}
}

message RegisterReq {
  string passport = 1; // v:required|min-length:2
  string password = 2; // v:required|min-length:6
  string email = 3; // v:required|email
}

message RegisterRes {
  int32 id = 1;
}

message LoginReq {
  string passport = 1; // v:required|min-length:2
  string password = 2; // v:required|min-length:6
}

message LoginRes {
  string token = 1;
}

message InfoReq {
  string token = 1; // v:required
}

message InfoRes {
  pbentity.User user = 1;
}